fixed social icons z-index

--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -3,7 +3,7 @@
   min-width: 100vw;
   min-height: 100vh;
   top: -2%;
-  z-index: 300;
+  z-index: 1;
   background-image: linear-gradient(
       to right,
       rgba(255, 255, 255, 0.3),
